Fixed date, to display human readable values

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -56,7 +56,7 @@
   padding-bottom: 20px;
   font-weight: 300;
   margin-bottom: 0;
-  word-wrap: normal;
+  word-wrap: break-word;
 }
 
 .footer-info {
